--- a/app/views/current/views/business.html
+++ b/app/views/current/views/business.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Your business
+  Business details
 {% endblock %}
 
 {% block beforeContent %}
