--- a/app/views/current/views/check-answers-contact-details.html
+++ b/app/views/current/views/check-answers-contact-details.html
@@ -73,12 +73,8 @@ Check your answers
     </dl>
 
     {% if data['new-business'] == "yes" %}
-    <div class="govuk-warning-text">
-      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-      <strong class="govuk-warning-text__text">
-        <span class="govuk-warning-text__assistive">Important</span>
+    <div class="govuk-inset-text">
         As a new business, you will need to provide additional evidence of your finances in your full application.
-      </strong>
     </div>
     {% endif %}
 
