--- a/app/views/current/views/collaboration.html
+++ b/app/views/current/views/collaboration.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Will you supply any other farms with water? If so, how many?
+  How many other farms will be supplied with water?
 {% endblock %}
 
 {% block beforeContent %}
@@ -19,7 +19,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="collaboration-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                How many other farms will you supply with water?
+                How many other farms will be supplied with water?
               </h1>
             </legend>
             <div class="govuk-radios">
