--- a/app/views/current/views/country-fail.html
+++ b/app/views/current/views/country-fail.html
@@ -19,7 +19,7 @@
 
       <p>This grant is only open to businesses located in England.</p>
 
-      <p>Farming businesses in other UK countries may be eligible for a similar grant through their equivalent domestic schemes.</p>
+      <p>Farming businesses in other Scotland, Wales and Northern Ireland may be eligible for similar grants through their respective domestic schemes.</p>
 
       <!--See the <a href="">large countryside productivity grant guidance</a> for further information.</p>-->
 
