--- a/app/views/current/views/environment.html
+++ b/app/views/current/views/environment.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  How would your project improve the environment?
+  How will this project improve the environment?
 {% endblock %}
 
 {% block beforeContent %}
@@ -17,7 +17,7 @@
 
         <div class="govuk-form-group">
           <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--m" for="environment">
-              How would your project improve the environment?
+              How will this project improve the environment?
             </label>
           </h1>
           <textarea class="govuk-textarea" id="environment" name="environment" rows="8" aria-describedby="environment-hint">{{ data['environment'] }}</textarea>
