--- a/app/views/current/views/legal-status.html
+++ b/app/views/current/views/legal-status.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  What is the legal status of your {{ data['farming-type'] }} business?
+  What is the legal status of the {{ data['farming-type'] }} business?
 {% endblock %}
 
 {% block beforeContent %}
@@ -19,7 +19,7 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                What is the legal status of your {{ data['farming-type'] }} business?
+                What is the legal status of the {{ data['farming-type'] }} business?
               </h1>
             </legend>
             <div class="govuk-radios">
