--- a/app/views/current/views/planning-permission.html
+++ b/app/views/current/views/planning-permission.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Have you been granted planning permission?
+  Has this project been granted planning permission?
 {% endblock %}
 
 {% block beforeContent %}
@@ -19,7 +19,7 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Have you been granted planning permission?
+                Has this project been granted planning permission?
               </h1>
             </legend>
             <div class="govuk-radios govuk-radios--inline">
