--- a/app/views/current/views/project-start.html
+++ b/app/views/current/views/project-start.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Question page
+  Have you already started work on this project?
 {% endblock %}
 
 {% block beforeContent %}
@@ -19,7 +19,7 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Have you already started work on the project?
+                Have you already started work on this project?
               </h1>
             </legend>
             <div class="govuk-radios govuk-radios--inline">
