--- a/app/views/current/views/project.html
+++ b/app/views/current/views/project.html
@@ -31,7 +31,7 @@
               Project summary
             </label>
           <div id="project-summary-hint" class="govuk-hint">
-            What the project is, what it will do and what it is aiming to achieve.
+            What this project is, what it will do and what it is aiming to achieve.
           </div>
           <textarea class="govuk-textarea" id="project-summary" name="project-summary" rows="8" aria-describedby="project-summary-hint">{{ data['project-summary'] }}</textarea>
         </div>
