--- a/app/views/current/views/task-list.html
+++ b/app/views/current/views/task-list.html
@@ -98,7 +98,7 @@
           <input type="hidden" name="answers-checked" value="true">
 
           <button class="govuk-button" data-module="govuk-button">
-            Review your application
+            Check all your answers
           </button>
 
         </form>
