--- a/app/views/current/views/abstraction-licence.html
+++ b/app/views/current/views/abstraction-licence.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="">Back</a>
+  <a class="govuk-back-link" href="abstraction-required">Back</a>
 {% endblock %}
 
 {% block content %}
