--- a/app/views/current/views/abstraction-variation.html
+++ b/app/views/current/views/abstraction-variation.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Do you need a variation to your current abstraction licence for the project?
+  Do you need a variation to your current abstraction licence for this project?
 {% endblock %}
 
 {% block beforeContent %}
@@ -19,7 +19,7 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Do you need a variation to your current abstraction licence for the project?
+                Do you need a variation to your current abstraction licence for this project?
               </h1>
             </legend>
             <div class="govuk-radios govuk-radios--inline">
