--- a/app/views/current/views/new-business-condition.html
+++ b/app/views/current/views/new-business-condition.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="abstraction-variation">Back</a>
+  <a class="govuk-back-link" href="new-business">Back</a>
 {% endblock %}
 
 {% block content %}
