--- a/app/views/current/views/planning-permission-fail.html
+++ b/app/views/current/views/planning-permission-fail.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="planning-permission">Back</a>
+  <a class="govuk-back-link" href="planning-progress">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -17,7 +17,7 @@
         You cannot apply for a large countryside productivity grant
       </h1>
 
-      <p>Planning permission can take a long time to acquire. You can only get a grant is you already have planning permission or expect to get it within six months.</p>
+      <p>Planning permission can take a long time to acquire. You can only get a grant if you already have planning permission or expect to get it within six months.</p>
 
     </div>
   </div>
