--- a/app/views/current/views/planning-progress.html
+++ b/app/views/current/views/planning-progress.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  e you likely to be granted planning permission within the next six months?
+  Is this project likely to be granted planning permission within the next six months?
 {% endblock %}
 
 {% block beforeContent %}
@@ -19,7 +19,7 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Are you likely to be granted planning permission within the next six months?
+                Is this project likely to be granted planning permission within the next six months?
               </h1>
             </legend>
             <div class="govuk-radios govuk-radios--inline">
