--- a/app/views/current/views/preferred-contact.html
+++ b/app/views/current/views/preferred-contact.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Who should we contact about this application?
+  Who should we contact about this expression of interest?
 {% endblock %}
 
 {% block beforeContent %}
@@ -19,7 +19,7 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Who should we contact about this application?
+                Who should we contact about this expression of interest?
               </h1>
             </legend>
             <div class="govuk-radios">
