--- a/app/views/current/views/project-cost.html
+++ b/app/views/current/views/project-cost.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="/tenancy">Back</a>
+  <a class="govuk-back-link" href="tenancy">Back</a>
 {% endblock %}
 
 {% block content %}
