--- a/app/views/current/views/check-answers-theme-eligibility.html
+++ b/app/views/current/views/check-answers-theme-eligibility.html
@@ -17,7 +17,7 @@
 
     <h2 class="govuk-heading-m">Theme eligibility</h2>
 
-    <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+    <dl class="govuk-summary-list">
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key govuk-!-width-one-third">
           Project items
@@ -171,7 +171,7 @@
 
       <input type="hidden" name="answers-checked" value="true">
 
-      <button class="govuk-button" data-module="govuk-button">
+      <button class="govuk-button govuk-!-margin-top-4" data-module="govuk-button">
         Save and continue
       </button>
 
