--- a/app/views/current/views/check-answers-contact-details.html
+++ b/app/views/current/views/check-answers-contact-details.html
@@ -17,7 +17,7 @@ Check your answers
 
     <h2 class="govuk-heading-m">Business details</h2>
 
-    <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+    <dl class="govuk-summary-list">
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key govuk-!-width-one-third">
           Business name
@@ -80,9 +80,9 @@ Check your answers
 
     {% if (data['applying'] == "own") or (data['preferred-contact'] == "contact me and the applicant") %}
 
-    <h2 class="govuk-heading-m">Your details</h2>
+    <h2 class="govuk-heading-m govuk-!-margin-top-9">Your details</h2>
 
-    <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+    <dl class="govuk-summary-list">
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key govuk-!-width-one-third">
           Full name
@@ -148,9 +148,9 @@ Check your answers
 
     {% if (data['applying'] == "other") %}
 
-    <h2 class="govuk-heading-m">Applicant details</h2>
+    <h2 class="govuk-heading-m govuk-!-margin-top-9">Applicant details</h2>
 
-    <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+    <dl class="govuk-summary-list">
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key govuk-!-width-one-third">
           Applicant name
@@ -218,7 +218,7 @@ Check your answers
 
       <input type="hidden" name="answers-checked" value="true">
 
-      <button class="govuk-button" data-module="govuk-button">
+      <button class="govuk-button govuk-!-margin-top-4" data-module="govuk-button">
         Save and continue
       </button>
 
