--- a/app/views/current/views/check-answers-project-eligibility.html
+++ b/app/views/current/views/check-answers-project-eligibility.html
@@ -17,7 +17,7 @@
 
     <h2 class="govuk-heading-m">Project eligibility</h2>
 
-    <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+    <dl class="govuk-summary-list">
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key govuk-!-width-one-third">
           Type of business
@@ -150,7 +150,7 @@
 
       <input type="hidden" name="answers-checked" value="true">
 
-      <button class="govuk-button" data-module="govuk-button">
+      <button class="govuk-button govuk-!-margin-top-4" data-module="govuk-button">
         Save and continue
       </button>
 
