--- a/app/views/current/views/collaboration.html
+++ b/app/views/current/views/collaboration.html
@@ -24,19 +24,19 @@
             </legend>
             <div class="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="collaboration" name="collaboration" type="radio" value="none">
+                <input class="govuk-radios__input" id="collaboration" name="collaboration" type="radio" value="none" {{ checked("collaboration", "none") }}>
                 <label class="govuk-label govuk-radios__label" for="collaboration">
                   None
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="collaboration-2" name="collaboration" type="radio" value="1-3">
+                <input class="govuk-radios__input" id="collaboration-2" name="collaboration" type="radio" value="1 - 3" {{ checked("collaboration", "1 - 3") }}>
                 <label class="govuk-label govuk-radios__label" for="collaboration-2">
                   1 - 3
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="collaboration-3" name="collaboration" type="radio" value="4 or more">
+                <input class="govuk-radios__input" id="collaboration-3" name="collaboration" type="radio" value="4 or more" {{ checked("collaboration", "4 or more") }}>
                 <label class="govuk-label govuk-radios__label" for="collaboration-3">
                   4 or more
                 </label>
