--- a/app/views/current/views/new-business.html
+++ b/app/views/current/views/new-business.html
@@ -19,7 +19,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="new-business-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Has the business been trading for less than two years?
+                Has the business been trading for more than two years?
               </h1>
             </legend>
             <div class="govuk-radios govuk-radios--inline">
