Added jumping off page

--- a/app/views/current/views/index.html
+++ b/app/views/current/views/index.html
@@ -25,10 +25,10 @@
   </thead>
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
-      <td class="govuk-table__cell"><a href="start">
-          Large grants expression of interest
+      <td class="govuk-table__cell"><a href="welcome">
+          Expression of interest
         </a></td>
-      <td class="govuk-table__cell">Water resource management EOI</td>
+      <td class="govuk-table__cell">Water resource management</td>
     </tr>
   </tbody>
 </table>
