--- a/app/views/current/views/new-irrigation.html
+++ b/app/views/current/views/new-irrigation.html
@@ -21,7 +21,7 @@
 
         <div class="govuk-form-group">
           <label class="govuk-label" for="new-land-irrigated">
-              How much land will be irrigated?
+              How much land will be irrigated in total?
             </label>
           <textarea class="govuk-textarea" id="new-land-irrigated" name="new-land-irrigated" rows="2" aria-describedby="new-land-irrigated-hint">{{ data['new-land-irrigated'] }}</textarea>
         </div>
