--- a/app/views/current/views/proposed-irrigation.html
+++ b/app/views/current/views/proposed-irrigation.html
@@ -21,7 +21,7 @@
 
         <div class="govuk-form-group">
           <label class="govuk-label" for="improved-land-irrigated">
-              How much land will be irrigated?
+              How much land will be irrigated in total?
             </label>
           <textarea class="govuk-textarea" id="improved-land-irrigated" name="improved-land-irrigated" rows="2" aria-describedby="improved-land-irrigated-hint">{{ data['improved-land-irrigated'] }}</textarea>
         </div>
