Content changes to start page

--- a/app/views/current/views/start.html
+++ b/app/views/current/views/start.html
@@ -33,12 +33,12 @@
       <p>Use this service to:</p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li>find out if you are eligible to receive a large grant</li>
-        <li>create an expression of interest</li>
-        <li>submit an expression of interest</li>
+        <li>find out if you can apply for a large grant for a specific project</li>
+        <li>send an expression of interest</li>
+        <li>see if a full grant application is likely to be successful or not</li>
       </ul>
 
-      <p>Creating and submitting an expression of interest takes around xx minutes.</p>
+      <p>Completing the eligibility check and expression of interest takes around XX minutes.</p>
 
       <a href="farming-type" role="button" draggable="false" class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8"  data-module="govuk-button">
         Start now
@@ -49,9 +49,13 @@
 
       <h2 class="govuk-heading-m">Before you start</h2>
 
-      <p>Using this service is the quickest way to express your interest in receiving a large grant.
+      <p>You need:</p>
+      <ul class="govuk-list govuk-list--bullet">
+      <li>an estimate of the project cost</li>
+      <li>a clear understanding of the project benefits</li>
+      </ul>
 
-      <p>You can also download and complete an application form, and send it to the <a href="https://www.gov.uk/government/organisations/rural-payments-agency">Rural Payments Agency</a>.</p>
+      <p>You can also download and complete a <a href="">countryside productivity large grant application form</a>.</p>
 
     </div>
 
