--- a/app/views/current/views/task-list.html
+++ b/app/views/current/views/task-list.html
@@ -15,10 +15,10 @@
       <h2 class="govuk-heading-s govuk-!-margin-bottom-2">{{ application_status }}</h2>
       <p class="govuk-body govuk-!-margin-bottom-7">{{ completed_sections }}</p>
 
-      <ol class="app-task-list">
+      <ul class="app-task-list">
         <li>
           <h2 class="app-task-list__section">
-            <span class="app-task-list__section-number">1. </span> Expression of interest
+            Expression of interest
           </h2>
           <ul class="app-task-list__items">
             <li class="app-task-list__item">
@@ -115,7 +115,7 @@
 
         </li> -->
 
-      </ol>
+      </ul>
     </div>
   </div>
 
