--- a/public/sass/application.scss
+++ b/public/sass/application.scss
@@ -18,3 +18,5 @@ $govuk-assets-path: '/govuk/assets/';
 @import "components/cookie-banner";
 
 // Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you
+
+@import "grants";
