--- a/app/views/current/views/start.html
+++ b/app/views/current/views/start.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  {{ serviceName }}
+  {{ serviceName }} - GOV.UK
 {% endblock %}
 
 {% block header %}
