--- a/app/views/current/views/farming-type.html
+++ b/app/views/current/views/farming-type.html
@@ -1,11 +1,15 @@
 {% extends "layout.html" %}
 
+
+{% set thisPageTitle = 'What type of farming do you do?' %}
+
 {% block pageTitle %}
-  What type of farming do you do?
+  {{ thisPageTitle }} - {{ serviceName }} - GOV.UK
 {% endblock %}
 
+
 {% block beforeContent %}
-  <a class="govuk-back-link" href="start">Back</a>
+  <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -19,7 +23,7 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                What type of farming do you do?
+                {{ thisPageTitle }}
               </h1>
             </legend>
             <div class="govuk-radios">
