--- a/app/views/current/views/legal-status.html
+++ b/app/views/current/views/legal-status.html
@@ -1,11 +1,14 @@
 {% extends "layout.html" %}
 
+
+{% set thisPageTitle = 'What is the legal status of your ' + data['farming-type'] + ' business?' %}
+
 {% block pageTitle %}
-  What is the legal status of your {{ data['farming-type'] }} business?
+  {{ thisPageTitle }} - {{ serviceName }} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="farming-type">Back</a>
+  <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -19,7 +22,7 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                What is the legal status of your {{ data['farming-type'] }} business?
+                {{ thisPageTitle }}
               </h1>
             </legend>
             <div class="govuk-radios">
