--- a/app/views/current/views/project-cost.html
+++ b/app/views/current/views/project-cost.html
@@ -1,11 +1,13 @@
 {% extends "layout.html" %}
 
+{% set thisPageTitle = 'What is the estimated total project cost?' %}
+
 {% block pageTitle %}
-  What are your estimate total project costs?
+  {{ thisPageTitle }} - {{ serviceName }} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="/tenancy">Back</a>
+  <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -17,7 +19,7 @@
 
         <div class="govuk-form-group">
           <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="project-cost">
-              What is the estimated total project cost?
+              {{ thisPageTitle }}
             </label>
           </h1>
           <div id="account-number-hint" class="govuk-hint">
