--- a/app/views/current/views/remaining-costs.html
+++ b/app/views/current/views/remaining-costs.html
@@ -1,11 +1,13 @@
 {% extends "layout.html" %}
 
+{% set thisPageTitle = 'Grant funding' %}
+
 {% block pageTitle %}
-  Meeting the remaining project costs
+  {{ thisPageTitle }} - {{ serviceName }} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="project-cost">Back</a>
+  <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -14,7 +16,7 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-l">
-        Grant funding
+        {{ thisPageTitle }}
       </h1>
 
       {% set grantAmount = data['project-cost'] * 0.4 %}
