--- a/app/views/current/views/index.html
+++ b/app/views/current/views/index.html
@@ -76,7 +76,7 @@
       <td class="govuk-table__cell">Expression of Interest project benefits</td>
     </tr>
     <tr class="govuk-table__row">
-      <td class="govuk-table__cell"><a href="task-list">
+      <td class="govuk-table__cell"><a href="task-list?p=1">
           Task list
         </a></td>
       <td class="govuk-table__cell">Task list page for the '{{serviceName}}' service</td>
